Colaboratory를 통해 생성됨

--- a/20210317.ipynb
+++ b/20210317.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNf99kOprMG7NCB2Cgswts4",
+      "authorship_tag": "ABX9TyNX6Z2B6Bv8vM5bGLLJu6a6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,24 +27,88 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EEqZ5uqvuQ65"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EEqZ5uqvuQ65",
+        "outputId": "aaf8f8ca-d5a4-451d-91df-c2bc68c05592"
       },
       "source": [
-        ""
+        "for i in range(1,2):\r\n",
+        "  for j in range(3,5):\r\n",
+        "    print(i*j)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wFhtlHSRuVmr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wFhtlHSRuVmr",
+        "outputId": "5a97f68d-f6c2-480f-8531-010fbcaefe66"
       },
       "source": [
-        ""
+        "a = ['you','have','got','a', 'friend', 'in', 'me']\r\n",
+        "b = [i for i in a if len(i) >=3]\r\n",
+        "b"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['you', 'have', 'got', 'friend']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VpwM5AoOwCRD",
+        "outputId": "3ed64b2b-4205-444d-f32e-cea567c212e2"
+      },
+      "source": [
+        "a = ['I','love','you']\r\n",
+        "b = [i for i in a if len(i) >=3]\r\n",
+        "b"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['love', 'you']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
