Colaboratory를 통해 생성됨

--- a/20210317.ipynb
+++ b/20210317.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNX6Z2B6Bv8vM5bGLLJu6a6",
+      "authorship_tag": "ABX9TyNxQSnZBCrPQdV8UQcZNRb9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,36 @@
             "4\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LOguCfNBxAul",
+        "outputId": "30c6f80f-c4f6-4456-9355-9b453a23558c"
+      },
+      "source": [
+        "a = [3,6,9,12]\r\n",
+        "b = [i for i in a if i >=7]\r\n",
+        "b"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9, 12]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
         }
       ]
     },
