Colaboratory를 통해 생성됨

--- a/20210322.ipynb
+++ b/20210322.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+mRH63tvIkOfpjL3mkW3h",
+      "authorship_tag": "ABX9TyPJM4g45XPqF7A9m55g3909",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,27 +30,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
-        },
-        "id": "J781tIBnXqlx",
-        "outputId": "ebe8942c-71b7-46ab-a382-bb16c9e8ffa8"
+        "id": "J781tIBnXqlx"
       },
       "source": [
-        "def func\n",
-        "y=a*x**2+b*x+c\n",
-        "return y"
+        "def func2(x,a,b,c):\n",
+        "  y=a*x**2+b*x+c\n",
+        "  return y"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Pz8vaVPZ2we",
+        "outputId": "7742c986-0fe5-4657-8f8d-83339e98d5da"
+      },
+      "source": [
+        "func2(7,3,6,-3)"
+      ],
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-3995f3ea06b6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def func(x,a,b,c)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "186"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MzLms4ehYqHX"
+      },
+      "source": [
+        "def func1(x,a,b):\n",
+        " y=a*x+b\n",
+        " return y"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5P_dAqa7aAyw",
+        "outputId": "e85f5974-5e5e-4256-e212-91aecd6426a7"
+      },
+      "source": [
+        "func1(1,2,3)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
         }
       ]
     },
