Colaboratory를 통해 생성됨

--- a/20210331.ipynb
+++ b/20210331.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDV+iucKPM1oXbmKe14qlY",
+      "authorship_tag": "ABX9TyM/aS+YMfs3xQRoiUkmHxrD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,10 +34,10 @@
       },
       "source": [
         "sound '아'\n",
-        "pitch: \n",
-        "duration: 0.559828\n",
-        "intensity: \n",
-        "formants:\n",
+        "pitch: 207.5 Hz\n",
+        "duration: 0.559828 sec\n",
+        "intensity: 70.30 dB\n",
+        "formants: 2,655 Hz\n",
         "\n"
       ]
     },
@@ -48,19 +48,10 @@
       },
       "source": [
         "sound '애'\n",
-        "pitch: Hz\n",
+        "pitch: 207.5 Hz\n",
         "duration:0.603451 sec\n",
-        "intensity: db\n",
-        "formants: Hz"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4ISwuOfk4w26"
-      },
-      "source": [
-        ""
+        "intensity: 68.74 db\n",
+        "formants: 2,527.1 Hz"
       ]
     }
   ]
