--- a/20210426.ipynb
+++ b/20210426.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODjzC0G3imU5NPbe/C04dE",
+      "authorship_tag": "ABX9TyNZedjYz88gf4otKCx9atGo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,37 +39,8 @@
         "import numpy as np\n",
         "from scipy.signal import lfilter"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        },
-        "id": "QtORr248xW4y",
-        "outputId": "0f63b7de-987f-4b06-f76f-911b1b3c27db"
-      },
-      "source": [
-        "phasor(amp,sr,dur,freq)\n",
-        "return(signal,theta, time)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-ded40d7f2944>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mphasor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mamp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdur\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfreq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'phasor' is not defined"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -83,66 +54,44 @@
         "dur = 0.5        # in seconds\n",
         "freq = 100.0     # sine frequency, Hz"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D1WWQ7TXpMZ5"
+        "id": "QtORr248xW4y"
       },
       "source": [
-        "# generate time\n",
-        "t = np.arange(1, sr * dur+1)/sr"
+        "def phasor(amp, sr, dur, freq):\n",
+        "  return (signal,theta, time)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mYAobErzpNA6"
+        "id": "3TTI-XaNy8hD",
+        "outputId": "aa6056b8-5ccc-4cec-8604-2d45fd41bda7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# generate phase\n",
-        "theta = t * 2*np.pi * freq"
+        "c = phasor\n",
+        "print(c)"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GsuENjFcujbr"
-      },
-      "source": [
-        "# generate signal by cosine-phasor\n",
-        "s = np.sin(theta)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9-GyyZVRw3XL"
-      },
-      "source": [
-        "ipd.Audio(s, rate=sr)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sgUF3UCNxarl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<function phasor at 0x7f51612a9e60>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
